tests/negative/traits/mismatch_receiver_missing.orng
// mismatch_receiver_missing.orng:10:7: error: trait `My_Trait` specifies receiver `self` for method `f`
//     fn f() -> () {}
//      ^
// 
trait My_Trait {
    fn f(self) -> ()
}

impl My_Trait for Int {
    fn f() -> () {}
}

fn main() -> Int {
    4
}